# test2_perception

./: .gitignore
src/dead_reckoning_pkg/: package.xml  setup.cfg  setup.py
src/dead_reckoning_pkg/dead_reckoning_pkg/: dead_reckoning_test.py
src/info_publisher_pkg/: package.xml  setup.cfg  setup.py
src/info_publisher_pkg/info_publisher_pkg/: cone_info_node.py  drum_info_node.py
src/info_publisher_pkg/launch/: info_publisher.launch.py
src/interfaces_pkg/: CMakeLists.txt
src/interfaces_pkg/msg/: TrafficLightState.msg
src/lane_tracking_pkg/: package.xml  setup.cfg  setup.py
src/lane_tracking_pkg/lane_tracking_pkg/: image_publisher_node.py  lane_info_extractor_node.py  yolov8_node.py  yolov8_visualizer_node.py
src/lane_tracking_pkg/launch/: lane_tracking.launch.py
src/launch_pkg/: CMakeLists.txt  package.xml
src/launch_pkg/launch/: bag_launch.py  main.launch.py  sub_launch.py
src/perception_yolov8_pkg/launch/: multi_camera_yolov8.launch.py
src/perception_yolov8_pkg/perception_yolov8_pkg/: image_publisher_node.py  yolov8_node.py
src/sensor_fusion_pkg/launch/: fusion_multi.launch.py
src/sensor_fusion_pkg/sensor_fusion_pkg/: bbox_projector_node.py
src/sensor_initialize/: CMakeLists.txt
src/sensor_initialize/launch/: sensor_tf.launch.py
src/sensor_initialize/src/: lidar_preprocessing_node.cpp
src/stop_line_detector_pkg/: package.xml  setup.cfg  setup.py
src/stop_line_detector_pkg/launch/: stop_line_detector.launch.py
src/stop_line_detector_pkg/stop_line_detector_pkg/: stop_line_detector_node.py  video_publisher_node.py
src/tl_perception_pkg/: package.xml  setup.cfg  setup.py
src/tl_perception_pkg/launch/: tl_detector.launch.py
src/tl_perception_pkg/tl_perception_pkg/: test_node.py  tl_detector_node.py
src/waypoint_follower_pkg/: setup.py
(+2 files in other folders)
